--- a/foundations/01-css-methods/styles.css
+++ b/foundations/01-css-methods/styles.css
@@ -1,5 +1,7 @@
-p {
-    background-color: green;
-    font-size: 18px;
+div {
+    background-color: red;
     color: white;
-}
+    font-size: 32px;
+    text-align: center;
+    font-weight: bold;
+  }
