--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -2,3 +2,8 @@
     background-color:#f08080;
     font-family: Verdana, 'DejaVu Sans', sans-serif;
 }
+
+#xyz {
+    color: #0000ff;
+    font-size: 36px;
+}
