--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -3,6 +3,10 @@
     font-family: Verdana, 'DejaVu Sans', sans-serif;
 }
 
+.abc.def {
+    font-size: 24px;
+}
+
 #xyz {
     color: #0000ff;
     font-size: 36px;
